--- a/workflows/Retool Changelog Subscription/workflow.yml
+++ b/workflows/Retool Changelog Subscription/workflow.yml
@@ -108,7 +108,7 @@ setupScripts:
 
           /* Add destructured imports from library below
           eg. const { pow, log } = require("mathjs") */
-hasProtectedTriggers: false
+hasProtectedTriggers: true
 triggerWebhooks:
   array:
     - object:
