--- a/workflows/Manage user/workflowTriggers/triggers.yml
+++ b/workflows/Manage user/workflowTriggers/triggers.yml
@@ -1,6 +1,14 @@
-- id: 6a4f3935-481a-41b7-b06a-63e1432e45e2
-  createdBy: 1283335
-  enabledAt: '2025-10-08T18:25:54.419Z'
+- id: 24b2b66e-0497-41f4-ba93-65eee538ab0e
+  createdBy: null
+  enabledAt: '2025-10-08T18:27:55.899Z'
+  workflowId: 0806b17c-bfb5-4317-965b-09d89531e5ee
+  triggerType: webhook
+  environmentId: b030c213-b7d4-4483-a892-1ce54a3e5683
+  triggerOptions: null
+  concurrencyLimit: null
+- id: 8843c260-bad4-436c-8496-e197161816c4
+  createdBy: null
+  enabledAt: '2025-10-08T18:27:55.883Z'
   workflowId: 0806b17c-bfb5-4317-965b-09d89531e5ee
   triggerType: schedule
   environmentId: b030c213-b7d4-4483-a892-1ce54a3e5683
@@ -9,11 +17,3 @@
     timezone: UTC
     scheduleType: interval
   concurrencyLimit: 1
-- id: da186a0a-5008-4d18-a72a-6b8ed8335152
-  createdBy: 1283335
-  enabledAt: '2025-10-08T18:25:55.316Z'
-  workflowId: 0806b17c-bfb5-4317-965b-09d89531e5ee
-  triggerType: webhook
-  environmentId: b030c213-b7d4-4483-a892-1ce54a3e5683
-  triggerOptions: null
-  concurrencyLimit: null
